reset vertical-align in fixed-data-table cell to avoid conflicts with FlexView

--- a/src/table/table.scss
+++ b/src/table/table.scss
@@ -56,6 +56,9 @@ $hover-scrollbar-color: white !default;
     &:last-child {
       border-width: 0;
     }
+    .public_fixedDataTableCell_wrap3 {
+      vertical-align: baseline; // needed to enable `height: 100%` on our cell components
+    }
   }
 
   // selection/hover
